2007-05-11  Paul Smith  <psmith@gnu.org>

	* job.c (new_job): Add debug info to specify where make found the
	command script it is running to build a target.
	Fixes Savannah bug #18617.

	* default.c (default_suffixes,default_suffix_rules,default_variables):
	Add support for Objective C.  Fixes Savannah bug #16389.
	Based on a patch provided by Peter O'Gorman <peter@pogma.com>.

	* function.c (func_lastword): Initialize p.

	* doc/make.texi (Eval Function, Implicit Variables, Special Targets):
	Doc fixes noticed by Bob <twobanjobob@sbcglobal.net>.  Patch from
	Dave Korn <dave.korn@artimi.com>

2007-05-08  Paul Smith  <psmith@gnu.org>

	Fix Savannah bug #19656:

	* configure.in: Check for strcasecmp(), strcmpi(), and stricmp().

	* make.h: Change all case-insensitive string compares to use
	strcasecmp() (from POSIX).  If we don't have that but do have one
	of the others, define strcasecmp to be one of those instead.  If
	we don't have any, declare a prototype for our own version.

	* misc.c (strcasecmp): Use this if we can't find any native
	case-insensitive string comparison function.
	* vmsfunctions.c: Remove strcmpi(); we'll use misc.c:strcasecmp().
	* main.c (find_and_set_default_shell): Use strcasecmp() instead of
	strcmpi().
	* job.c (_is_unixy_shell, construct_command_argv_internal): Use
	strcasecmp() instead of stricmp().
	* hash.h (ISTRING_COMPARE, return_ISTRING_COMPARE): Use strcasecmp()
	instead of strcmpi().
	* acinclude.m4: Remove the strcasecmp() check from here.

2007-03-21  Paul Smith  <psmith@gnu.org>

	* configure.in: Don't turn on case-insensitive file system support
	if --disable-... is given.  Fixes Savannah bug #19348.

2007-03-19  Paul Smith  <psmith@gnu.org>

	* ALL: Use the strcache for all file name strings, or other
	strings which we will never free.  The goal is to save memory by
	avoiding duplicate copies of strings.  However, at the moment this
	doesn't save much memory in most situations: due to secondary